# yolo11-ncnn

./: .gitignore  README.md  README.zh-CN.md  requirements.txt  run_ncnn.py
cmake/: CMakeLists.txt  build.bat
cmake/src/: CMakeLists.txt  yolov8.cpp
yolo11n_ncnn_model/: metadata.yaml  model_ncnn.py
